; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_object.c_check_type_combination.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_object.c_check_type_combination.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_EINVALIDSPEC = common dso_local global i32 0, align 4
@GIT_OBJECT_ANY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @check_type_combination to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_type_combination(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %28

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  switch i32 %11, label %25 [
    i32 131, label %12
    i32 128, label %12
    i32 130, label %14
    i32 129, label %24
  ]

12:                                               ; preds = %10, %10
  %13 = load i32, i32* @GIT_EINVALIDSPEC, align 4
  store i32 %13, i32* %3, align 4
  br label %28

14:                                               ; preds = %10
  %15 = load i32, i32* %5, align 4
  %16 = icmp ne i32 %15, 128
  br i1 %16, label %17, label %23

17:                                               ; preds = %14
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* @GIT_OBJECT_ANY, align 4
  %20 = icmp ne i32 %18, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %17
  %22 = load i32, i32* @GIT_EINVALIDSPEC, align 4
  store i32 %22, i32* %3, align 4
  br label %28

23:                                               ; preds = %17, %14
  br label %27

24:                                               ; preds = %10
  br label %27

25:                                               ; preds = %10
  %26 = load i32, i32* @GIT_EINVALIDSPEC, align 4
  store i32 %26, i32* %3, align 4
  br label %28

27:                                               ; preds = %24, %23
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %27, %25, %21, %12, %9
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
